tests/scripts/impl-error-cases.hk.err
error: 13:11 - Unknown enum variant or method: NonExistent::method
  let p = NonExistent::method();
          ^^^^^^^^^^^^^^^^^^^^^