tests/scripts/impl-error-cases.hk
struct Point {
  x: int,
  y: int,
}

impl Point {
  fn new(x: int, y: int) -> Point {
    Point { x: x, y: y }
  }
}

fn main() {
  // Test invalid method call
  let p = NonExistent::method();
  println!(p);
}

main();